--- a/src/app/modules/pagos/registrar-cobro/registrar-cobro.component.html
+++ b/src/app/modules/pagos/registrar-cobro/registrar-cobro.component.html
@@ -135,7 +135,7 @@
           </select>
         </div>
 
-        <!-- todo: COPIA Y PEGA DEL BOTON DE MESA -> PERO PARA TIPO DE PAGOS -->
+        <!-- Selector de tipo de pago -->
         <div class="border border-gray-300 rounded-lg p-4 bg-white shadow-sm">
           <label class="block text-xs font-semibold text-[#546E7A] mb-1"
             >Tipo de Pago</label
@@ -154,12 +154,11 @@
             Cargando tipos de pago...
           </div>
           <div *ngIf="tipoPagoSeleccionado" class="text-sm text-green-600 mt-1">
-            Seleccionaste: {{ tipoPagoSeleccionado.nombre }}
+            Seleccionado: {{ tipoPagoSeleccionado.nombre }}
           </div>
         </div>
 
         <!-- Botón Confirmar -->
-         <!-- TODO: Cambio para que el boton confirmar espere a rellenar el tipo de pago -->
         <button
           [disabled]="!clienteNombres || !tipoPagoSeleccionado || botonUnico"
           (click)="confirmarPagoConCliente()"
@@ -175,6 +174,7 @@
         <div *ngIf="mensajeError" class="text-red-500 text-sm mt-2 text-center">
           {{ mensajeError }}
         </div>
+
       </div>
 
       <!-- Columna derecha: Detalles del consumo -->
